--- a/public/css/dashmix.css
+++ b/public/css/dashmix.css
@@ -1,7 +1,9 @@
 @charset "UTF-8";
 .bckimagelogin {
   background-color: #ccc !important;
-  background-image: url("../media/img/glag.png");
+  background-image: url("../media/img/zuzi-bck-transparent.svg");
+    background-size: cover !important;
+    background-repeat: no-repeat;
 }
 
 .ck-editor__editable {
@@ -164,7 +166,7 @@ sup {
 }
 
 a {
-  color: #314837;
+  color: #e50077;
   text-decoration: none;
   background-color: transparent;
 }
@@ -2426,8 +2428,8 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #314837;
-  border-color: #314837;
+  background-color: #e50077;
+  border-color: #e50077;
 }
 .btn-primary:hover {
   color: #fff;
@@ -2442,8 +2444,8 @@ fieldset:disabled a.btn {
 }
 .btn-primary.disabled, .btn-primary:disabled {
   color: #fff;
-  background-color: #314837;
-  border-color: #314837;
+  background-color: #e50077;
+  border-color: #e50077;
 }
 .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active, .show > .btn-primary.dropdown-toggle {
   color: #fff;
@@ -2665,25 +2667,25 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-primary {
-  color: #314837;
-  border-color: #314837;
+  color: #e50077;
+  border-color: #e50077;
 }
 .btn-outline-primary:hover {
   color: #fff;
-  background-color: #314837;
-  border-color: #314837;
+  background-color: #e50077;
+  border-color: #e50077;
 }
 .btn-outline-primary:focus, .btn-outline-primary.focus {
   box-shadow: 0 0 0 0.2rem rgba(49, 72, 55, 0.5);
 }
 .btn-outline-primary.disabled, .btn-outline-primary:disabled {
-  color: #314837;
+  color: #e50077;
   background-color: transparent;
 }
 .btn-outline-primary:not(:disabled):not(.disabled):active, .btn-outline-primary:not(:disabled):not(.disabled).active, .show > .btn-outline-primary.dropdown-toggle {
   color: #fff;
-  background-color: #314837;
-  border-color: #314837;
+  background-color: #e50077;
+  border-color: #e50077;
 }
 .btn-outline-primary:not(:disabled):not(.disabled):active:focus, .btn-outline-primary:not(:disabled):not(.disabled).active:focus, .show > .btn-outline-primary.dropdown-toggle:focus {
   box-shadow: 0 0 0 0.2rem rgba(49, 72, 55, 0.5);
@@ -2866,7 +2868,7 @@ fieldset:disabled a.btn {
 
 .btn-link {
   font-weight: 400;
-  color: #314837;
+  color: #e50077;
   text-decoration: none;
 }
 .btn-link:hover {
@@ -3143,7 +3145,7 @@ input[type=button].btn-block {
 .dropdown-item.active, .dropdown-item:active {
   color: #fff;
   text-decoration: none;
-  background-color: #314837;
+  background-color: #e50077;
 }
 .dropdown-item.disabled, .dropdown-item:disabled {
   color: #adb5bd;
@@ -3478,8 +3480,8 @@ input[type=button].btn-block {
 }
 .custom-control-input:checked ~ .custom-control-label::before {
   color: #fff;
-  border-color: #314837;
-  background-color: #314837;
+  border-color: #e50077;
+  background-color: #e50077;
 }
 .custom-control-input:focus ~ .custom-control-label::before {
   box-shadow: 0 0 0 0.2rem rgba(49, 72, 55, 0.25);
@@ -3534,8 +3536,8 @@ input[type=button].btn-block {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26l2.974 2.99L8 2.193z'/%3e%3c/svg%3e");
 }
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::before {
-  border-color: #314837;
-  background-color: #314837;
+  border-color: #e50077;
+  background-color: #e50077;
 }
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::after {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3e%3cpath stroke='%23fff' d='M0 2h4'/%3e%3c/svg%3e");
@@ -3739,7 +3741,7 @@ input[type=button].btn-block {
   width: 1rem;
   height: 1rem;
   margin-top: -0.25rem;
-  background-color: #314837;
+  background-color: #e50077;
   border: 0;
   border-radius: 1rem;
   -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3768,7 +3770,7 @@ input[type=button].btn-block {
 .custom-range::-moz-range-thumb {
   width: 1rem;
   height: 1rem;
-  background-color: #314837;
+  background-color: #e50077;
   border: 0;
   border-radius: 1rem;
   -moz-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3800,7 +3802,7 @@ input[type=button].btn-block {
   margin-top: 0;
   margin-right: 0.2rem;
   margin-left: 0.2rem;
-  background-color: #314837;
+  background-color: #e50077;
   border: 0;
   border-radius: 1rem;
   -ms-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3919,7 +3921,7 @@ input[type=button].btn-block {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #314837;
+  background-color: #e50077;
 }
 
 .nav-fill > .nav-link,
@@ -4231,8 +4233,8 @@ input[type=button].btn-block {
 .page-item.active .page-link {
   z-index: 3;
   color: #fff;
-  background-color: #314837;
-  border-color: #314837;
+  background-color: #e50077;
+  border-color: #e50077;
 }
 .page-item.disabled .page-link {
   color: #adb5bd;
@@ -4308,7 +4310,7 @@ a.badge:hover, a.badge:focus {
 
 .badge-primary {
   color: #fff;
-  background-color: #314837;
+  background-color: #e50077;
 }
 a.badge-primary:hover, a.badge-primary:focus {
   color: #fff;
@@ -4587,7 +4589,7 @@ a.badge-dark:focus, a.badge-dark.focus {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #314837;
+  background-color: #e50077;
   transition: width 0.6s ease;
 }
 @media (prefers-reduced-motion: reduce) {
@@ -4668,8 +4670,8 @@ a.badge-dark:focus, a.badge-dark.focus {
 .list-group-item.active {
   z-index: 2;
   color: #fff;
-  background-color: #314837;
-  border-color: #314837;
+  background-color: #e50077;
+  border-color: #e50077;
 }
 .list-group-item + .list-group-item {
   border-top-width: 0;
@@ -5528,7 +5530,7 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #314837 !important;
+  background-color: #e50077 !important;
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
@@ -5656,7 +5658,7 @@ button.bg-dark:focus {
 }
 
 .border-primary {
-  border-color: #314837 !important;
+  border-color: #e50077 !important;
 }
 
 .border-secondary {
@@ -11029,11 +11031,11 @@ button.bg-dark:focus {
 }
 
 .text-primary {
-  color: #314837 !important;
+  color: #e50077 !important;
 }
 
 a.text-primary.link-fx::before {
-  background-color: #314837;
+  background-color: #e50077;
 }
 a.text-primary:hover, a.text-primary:focus {
   color: #080b09 !important;
@@ -11055,10 +11057,10 @@ a.text-secondary:hover, a.text-secondary:focus {
 }
 
 a.text-success.link-fx::before {
-  background-color: #82b54b;
+  background-color: #e50077;;
 }
 a.text-success:hover, a.text-success:focus {
-  color: #4e6d2d !important;
+  color: #e50077; !important;
 }
 
 .text-info {
@@ -11284,7 +11286,7 @@ a {
     width: 100%;
     height: 2px;
     content: "";
-    background-color: #314837;
+    background-color: #e50077;
     visibility: hidden;
     transform: scaleX(0);
     transform-origin: 0 50%;
@@ -11782,25 +11784,25 @@ small,
   font-size: 0.875rem;
   line-height: 1.5;
   border-radius: 0.25rem;
-  background-color: #314837;
+  background-color: #e50077;
   border: none;
   box-shadow: 0 0.125rem 0.75rem rgba(18, 26, 20, 0.25);
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, transform 0.12s ease-out;
 }
 .btn-hero-primary:hover {
   color: #fff;
-  background-color: #46664e;
+  background-color: #373f50;
   box-shadow: 0 0.375rem 0.75rem rgba(18, 26, 20, 0.4);
   transform: translateY(-1px);
 }
 .btn-hero-primary:focus, .btn-hero-primary.focus {
   color: #fff;
-  background-color: #46664e;
+  background-color: #373f50;
   box-shadow: 0 0.125rem 0.75rem rgba(18, 26, 20, 0.25);
 }
 .btn-hero-primary.disabled, .btn-hero-primary:disabled {
   color: #fff;
-  background-color: #314837;
+  background-color: #e50077;
   box-shadow: 0 0.125rem 0.75rem rgba(18, 26, 20, 0.25);
   transform: translateY(0);
 }
@@ -12349,7 +12351,7 @@ small,
 }
 
 .custom-control-primary .custom-control-input:checked ~ .custom-control-label::before {
-  background-color: #314837;
+  background-color: #e50077;
 }
 .custom-control-primary .custom-control-input:focus ~ .custom-control-label::before {
   box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(49, 72, 55, 0.25);
@@ -12361,19 +12363,19 @@ small,
   background-color: #e4e9f3;
 }
 .custom-control-primary.custom-checkbox .custom-control-input:checked ~ .custom-control-label::before {
-  background-color: #314837;
+  background-color: #e50077;
 }
 .custom-control-primary.custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::before {
-  background-color: #314837;
+  background-color: #e50077;
 }
 .custom-control-primary.custom-radio .custom-control-input:checked ~ .custom-control-label::before {
-  background-color: #314837;
+  background-color: #e50077;
 }
 .custom-control-primary.custom-block .custom-block-indicator {
-  background-color: #314837;
+  background-color: #e50077;
 }
 .custom-control-primary.custom-block .custom-control-input:checked ~ .custom-control-label {
-  border-color: #314837;
+  border-color: #e50077;
 }
 .custom-control-primary.custom-block .custom-control-input:focus ~ .custom-control-label {
   box-shadow: 0 0 0.75rem rgba(49, 72, 55, 0.25);
@@ -12606,7 +12608,7 @@ small,
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #314837;
+  background-color: #e50077;
 }
 
 .nav-tabs-block {
@@ -12623,7 +12625,7 @@ small,
   border-radius: 0;
 }
 .nav-tabs-block .nav-link:hover, .nav-tabs-block .nav-link:focus {
-  color: #314837;
+  color: #e50077;
   background-color: #f0f3f8;
   border-color: transparent;
 }
@@ -12648,17 +12650,17 @@ small,
   border-color: transparent;
 }
 .nav-tabs-alt .nav-link:hover, .nav-tabs-alt .nav-link:focus {
-  color: #314837;
+  color: #e50077;
   background-color: transparent;
   border-color: transparent;
-  box-shadow: inset 0 -3px #314837;
+  box-shadow: inset 0 -3px #e50077;
 }
 .nav-tabs-alt .nav-link.active,
 .nav-tabs-alt .nav-item.show .nav-link {
   color: #495057;
   background-color: transparent;
   border-color: transparent;
-  box-shadow: inset 0 -3px #314837;
+  box-shadow: inset 0 -3px #e50077;
 }
 
 .nav-items {
@@ -13216,7 +13218,7 @@ a.badge-secondary:focus, a.badge-secondary.focus {
 }
 #page-container.page-header-dark #page-header {
   color: #c8d2e6;
-  background-color: #314837;
+  background-color: #e50077;
 }
 #page-container.page-header-glass #page-header {
   position: absolute;
@@ -13533,7 +13535,7 @@ a.badge-secondary:focus, a.badge-secondary.focus {
 .block.block-themed > .block-header {
   border-bottom: none;
   color: #fff;
-  background-color: #314837;
+  background-color: #e50077;
 }
 .block.block-themed > .block-header > .block-title {
   color: rgba(255, 255, 255, 0.9);
@@ -13575,7 +13577,7 @@ a.badge-secondary:focus, a.badge-secondary.focus {
   width: 3rem;
   height: 3rem;
   line-height: 3rem;
-  color: #314837;
+  color: #e50077;
   font-family: Simple-Line-Icons;
   font-size: 1.125rem;
   text-align: center;
@@ -13744,7 +13746,7 @@ a.block.block-link-shadow:active {
   display: inline-block;
   padding: 6px 5px;
   line-height: 1;
-  color: #314837;
+  color: #e50077;
   background: none;
   border: none;
   cursor: pointer;
@@ -13805,7 +13807,7 @@ a.block.block-themed .btn-block-option:focus,
   right: 0;
   bottom: 0;
   left: 0;
-  background-color: #314837;
+  background-color: #e50077;
   z-index: 999998;
   transform: translateY(-100%);
 }
@@ -14726,14 +14728,14 @@ a.item.item-link-pop:active {
 
 .ribbon-primary .ribbon-box {
   color: #fff;
-  background-color: #314837;
+  background-color: #e50077;
 }
 .ribbon-primary.ribbon-bookmark .ribbon-box::before {
-  border-color: #314837;
+  border-color: #e50077;
   border-left-color: transparent;
 }
 .ribbon-primary.ribbon-bookmark.ribbon-left .ribbon-box::before {
-  border-color: #314837;
+  border-color: #e50077;
   border-right-color: transparent;
 }
 
@@ -14882,7 +14884,7 @@ button.bg-primary-op:focus {
 }
 
 .bg-primary-dark {
-  background-color: #1c2a20 !important;
+  background-color: #373f50 !important;
 }
 
 a.bg-primary-dark:hover, a.bg-primary-dark:focus,
@@ -15172,7 +15174,7 @@ button.bg-header-light:focus {
 }
 
 .bg-header-dark {
-  background-color: #314837 !important;
+  background-color: #e50077 !important;
 }
 
 a.bg-header-dark:hover, a.bg-header-dark:focus,
@@ -15202,11 +15204,11 @@ button.bg-sidebar-dark:focus {
 }
 
 .bg-gd-primary {
-  background: #314837 linear-gradient(135deg, #314837 0%, #50765a 100%) !important;
+  background: #e50077 linear-gradient(135deg, #e50077 0%, #50765a 100%) !important;
 }
 
 .bg-gd-dusk {
-  background: #d262e3 linear-gradient(135deg, #d262e3 0%, #314837 100%) !important;
+  background: #d262e3 linear-gradient(135deg, #d262e3 0%, #e50077 100%) !important;
 }
 
 .bg-gd-fruit {
@@ -15289,7 +15291,7 @@ button.bg-sidebar-dark:focus {
   }
 }
 .bg-default {
-  background-color: #314837 !important;
+  background-color: #e50077 !important;
 }
 
 a.bg-default:hover, a.bg-default:focus,
@@ -15359,7 +15361,7 @@ button.bg-default-lighter:focus {
 }
 
 .bg-gd-default {
-  background: #314837 linear-gradient(135deg, #314837 0%, #50765a 100%) !important;
+  background: #e50077 linear-gradient(135deg, #e50077 0%, #50765a 100%) !important;
 }
 
 .bg-xwork {
@@ -16255,7 +16257,7 @@ a.text-primary-lighter.link-fx::before {
   background-color: #739f7e;
 }
 a.text-primary-lighter:hover, a.text-primary-lighter:focus {
-  color: #46664e !important;
+  color: #373f50 !important;
 }
 
 .text-success-light {
@@ -16548,11 +16550,11 @@ a.text-dual:hover, a.text-dual:focus {
 }
 
 .text-default {
-  color: #314837 !important;
+  color: #e50077 !important;
 }
 
 a.text-default.link-fx::before {
-  background-color: #314837;
+  background-color: #e50077;
 }
 a.text-default:hover, a.text-default:focus {
   color: #080b09 !important;
@@ -16599,7 +16601,7 @@ a.text-default-lighter.link-fx::before {
   background-color: #739f7e;
 }
 a.text-default-lighter:hover, a.text-default-lighter:focus {
-  color: #46664e !important;
+  color: #373f50 !important;
 }
 
 .text-xwork {
@@ -26655,8 +26657,8 @@ readers do not read off random characters that represent icons */
 .open .dropdown-toggle.datepicker table tr td span.active:hover,
 .open .dropdown-toggle.datepicker table tr td span.active.disabled,
 .open .dropdown-toggle.datepicker table tr td span.active.disabled:hover {
-  background-color: #314837;
-  border-color: #314837;
+  background-color: #e50077;
+  border-color: #e50077;
 }
 
 .cke_chrome,
@@ -26695,10 +26697,10 @@ readers do not read off random characters that represent icons */
 }
 .dropzone:hover {
   background-color: #fff;
-  border-color: #314837;
+  border-color: #e50077;
 }
 .dropzone:hover .dz-message {
-  color: #314837;
+  color: #e50077;
 }
 
 table.dataTable {
@@ -26773,8 +26775,8 @@ div.dataTables_wrapper div.dataTables_paginate ul.pagination {
 }
 
 .fc-theme-bootstrap .fc-h-event {
-  background-color: #314837;
-  border: #314837;
+  background-color: #e50077;
+  border: #e50077;
 }
 .fc-theme-bootstrap .fc-col-header-cell {
   padding-top: 0.375rem;
@@ -26809,18 +26811,18 @@ div.dataTables_wrapper div.dataTables_paginate ul.pagination {
   background: #f0f3f8;
 }
 .irs.irs--round .irs-handle {
-  border-color: #314837;
+  border-color: #e50077;
 }
 .irs.irs--round .irs-from:before,
 .irs.irs--round .irs-to:before,
 .irs.irs--round .irs-single:before {
-  border-top-color: #314837;
+  border-top-color: #e50077;
 }
 .irs.irs--round .irs-bar,
 .irs.irs--round .irs-from,
 .irs.irs--round .irs-to,
 .irs.irs--round .irs-single {
-  background: #314837;
+  background: #e50077;
 }
 
 .jqstooltip {
@@ -26953,7 +26955,7 @@ div.dataTables_wrapper div.dataTables_paginate ul.pagination {
   color: #fff;
   font-size: 0.875rem;
   font-weight: 600;
-  background-color: #314837;
+  background-color: #e50077;
   border: none;
   border-radius: 0.25rem;
 }
@@ -26968,7 +26970,7 @@ div.dataTables_wrapper div.dataTables_paginate ul.pagination {
   border-color: #d4dcec;
 }
 .select2-container--default .select2-results__option--highlighted[aria-selected] {
-  background-color: #314837;
+  background-color: #e50077;
 }
 .select2-container--default .select2-search--inline .select2-search__field {
   padding-right: 0;
@@ -27151,13 +27153,13 @@ div.dataTables_wrapper div.dataTables_paginate ul.pagination {
 .flatpickr-day.selected.nextMonthDay,
 .flatpickr-day.startRange.nextMonthDay,
 .flatpickr-day.endRange.nextMonthDay {
-  border-color: #314837;
-  background: #314837;
+  border-color: #e50077;
+  background: #e50077;
 }
 
 .flatpickr-months .flatpickr-prev-month:hover svg,
 .flatpickr-months .flatpickr-next-month:hover svg {
-  fill: #314837;
+  fill: #e50077;
 }
 
 #page-container.rtl-support {
