--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -18413,6 +18413,7 @@ html:not([dir=rtl]) .range-slider-ui.noUi-horizontal .noUi-handle {
 .product-gallery-preview-item > img {
   display: block;
   width: 100%;
+    border-radius: 5px;
 }
 .product-gallery-preview-item.active {
   position: relative;
