--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -133,6 +133,88 @@ hr {
 
 ul.spec{max-width:400px}
 
+.spikes {
+    position: relative;
+    background: #373f50;
+    height: 0px;
+}
+
+.spikes::after {
+    content: '';
+    position: absolute;
+    right: 0;
+    left: -0%;
+    top: 100%;
+    z-index: 10;
+    display: block;
+    height: 15px;
+    background-size: 15px 100%;
+    background-image: linear-gradient(135deg, #373f50 25%, transparent 25%), linear-gradient(225deg, #373f50 25%, transparent 25%);
+    background-position: 0 0;
+}
+
+.spikesw {
+    position: relative;
+    background: #fff;
+    height: 0px;
+}
+
+.spikesw::after {
+    content: '';
+    position: absolute;
+    right: 0;
+    left: -0%;
+    top: 100%;
+    z-index: 10;
+    display: block;
+    height: 15px;
+    background-size: 15px 100%;
+    background-image: linear-gradient(135deg, #fff 25%, transparent 25%), linear-gradient(225deg, #fff 25%, transparent 25%);
+    background-position: 0 0;
+}
+
+.spikeswtop {
+    position: relative;
+    background: #fff;
+    height: 0px;
+    margin-top:-60px;
+    margin-bottom:60px
+}
+
+.spikeswtop::after {
+    content: '';
+    position: absolute;
+    right: 0;
+    left: -0%;
+    top: 100%;
+    z-index: 10;
+    display: block;
+    height: 15px;
+    background-size: 15px 100%;
+    background-image: linear-gradient(315deg, #fff 25%, transparent 25%), linear-gradient(45deg, #fff 25%, transparent 25%);
+    background-position: 0 0;
+}
+
+.spikesg {
+    position: relative;
+    background: #282e3a;
+    height: 0px;
+}
+
+.spikesg::after {
+    content: '';
+    position: absolute;
+    right: 0;
+    left: -0%;
+    top: 100%;
+    z-index: 10;
+    display: block;
+    height: 15px;
+    background-size: 15px 100%;
+    background-image: linear-gradient(135deg, #282e3a 25%, transparent 25%), linear-gradient(225deg, #282e3a 25%, transparent 25%);
+    background-position: 0 0;
+}
+
 h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
   margin-top: 0;
   margin-bottom: 0.75rem;
