--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -16812,12 +16812,12 @@ a.nav-link:hover .media-tab-media {
 
 @media (min-width: 300px) {
     .navbar-sticky.navbar-stuck {
-        position: fixed;
+        position: sticky;
         top: 0;
         left: 0;
         width: 100%;
-        -webkit-animation: navbar-show 0.25s;
-        animation: navbar-show 0.25s;
+        -webkit-animation: navbar-show 0.45s;
+        animation: navbar-show 0.45s;
         box-shadow: 0 0.25rem 0.5625rem -0.0625rem rgba(0, 0, 0, 0.03), 0 0.275rem 1.25rem -0.0625rem rgba(0, 0, 0, 0.05);
         z-index: 1030;
     }
