--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -264,6 +264,24 @@ h1, .h1 {
     border-left-color: #fff;
     left:0.05em;
 }
+.arrow-mb {
+    border-style: dashed;
+    border-color: transparent;
+    border-width: 0.20em;
+    display: -moz-inline-box;
+    display: inline-block;    /* Use font-size to control the size of the arrow. */
+    font-size: 150px;
+    height: 0;
+    line-height: 0;
+    position: relative;
+    vertical-align: middle;
+    width: 0;
+    background-color:#373f50;   /* change background color acc to bg color */
+    border-left-width: 0.2em;
+    border-left-style: solid;
+    border-left-color: #fff;
+    left:0.05em;
+}
 
 .bg-bck {
     --cz-bg-opacity: 1;
@@ -4782,8 +4800,8 @@ textarea.form-control-lg {
 }
 
 .card {
-    --cz-card-spacer-y: 1.25rem;
-    --cz-card-spacer-x: 1.25rem;
+    --cz-card-spacer-y: 1rem;
+    --cz-card-spacer-x: 1rem;
     --cz-card-title-spacer-y: 0.75rem;
     --cz-card-border-width: 1px;
     --cz-card-border-color: rgba(0, 0, 0, 0.085);
